--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>React App</title>
+    <title>Keeper App</title>
+    <link rel="stylesheet" href="style.css">
+    <link
+    href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
+    rel="stylesheet"
+  />
   </head>
+  
   <body>
     <script src="../src/index.js" type="text/jsx"></script>
     <div id="root"></div>
